--- a/SignalRApp/SignalRApp.csproj
+++ b/SignalRApp/SignalRApp.csproj
@@ -17,4 +17,8 @@
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.11" />
+  </ItemGroup>
+
 </Project>
